Add step for dir creation
The directory structure for bundling deployments has changed a bit.  The
relevant part is that we're sourcing deployment bundle files from
several different locations, instead of all files being managed manually
under one `keep-client-deployment-bundle` dir per participant.  As a
result we can't tar up a nice neat prepared dir for each participant.
This change is small in terms of effort on the participant side, and
allows us to source generic files for tar'ing that are the same for each
participant.

--- a/docs/keep-client-quickstart.adoc
+++ b/docs/keep-client-quickstart.adoc
@@ -38,7 +38,10 @@ feel free.  This guide will assume you use the default paths.*
 
 === Unzip the bundle
 
-`tar -xvf keep-client-deployment-bundle.tar.gz`
+```
+mkdir keep-client-deployment-bundle
+tar -xvf keep-client-deployment-bundle.tar.gz -C keep-client-deployment-bundle
+```
 
 Resulting directory should look like:
 
