Remove table of contents from changelog
After rendering it just looks weird to have a changelog with a toc.

--- a/private-testnet/changelog.adoc
+++ b/private-testnet/changelog.adoc
@@ -1,12 +1,6 @@
-:toc: macro
+= Keep Private Testnet Changelog
 
-= Changelog
-
-:icons: font
-:numbered:
-toc::[]
-
-Summary of Keep private-testnet iterations.
+Summary of Keep private testnet releases in reverse chronological order.
 
 == 2019-09-06
 
