--- a/private-testnet/README.adoc
+++ b/private-testnet/README.adoc
@@ -86,9 +86,6 @@ There are 3 scripts that make up preparing deployment bundles:
 
 === Dependencies
 
-Script execution requires the following NPM packages:
-
-* web3@1.0.0-beta.55
-* fs
-* @google-cloud/storage
+Package dependencies are listed in `keep-core/private-testnet/scripts/package.json`.
+you can install these by running `npm i` from the scripts dir.
 
