Correction to how callback expenditure is calculated
1. Customer publishes a relay request. We save the estimated gas price 
at the time of the request in the contract.

2. Group produces new relay entry, submitter publishes it to the chain calling 
the customer's callback

If we use the previous approach, with the lower of the estimated gas price at the
time of the request, or the actual price of the transaction to get the callback
expenditure, that expenditure may not reflect the actual cost the submitter had to pay.

To get the actual cost, we need to take the gas price from the time the submitter
published the transaction.

--- a/docs/rfc/rfc-16-pricing.adoc
+++ b/docs/rfc/rfc-16-pricing.adoc
@@ -157,9 +157,7 @@ the callback is called using the callback gas amount as the maximum gas.
 
 After the callback is made
 the amount of gas spent on the call
-is multiplied with the lower of the
-_estimated gas price_ at the time of the request,
-or the actual gas price of the transaction,
+is multiplied with the actual gas price of the transaction,
 to get the _callback expenditure_.
 
 ===== Requester refund
