--- a/docs/rfc/rfc-16-pricing.adoc
+++ b/docs/rfc/rfc-16-pricing.adoc
@@ -253,7 +253,7 @@ the beacon finishes and can accept requests again.
 ==== Rewards
 
 A _base reward_ for each member of a signing group that produces an entry
-is specified in the system constants.
+is specified in the system constants in the service contract.
 The nominal _profit margin_ of each entry
 equals the _base reward_ multiplied by the applicable _group size_.
 
@@ -379,8 +379,9 @@ once every _d_ entries on average.
 Divide DKG cost estimate by _d_ to get DKG contribution for each entry.
 
 The maximum DKG gas cost should be hardcoded in the operator contract.
-The service contract takes the highest applicable gas cost and multiplies
-it by the fluctuation margin times gas price feed's estimate.
+The service contract takes the highest applicable gas cost from all operator
+contracts being used and multiplies it by the fluctuation margin times gas price 
+feed's estimate.
 
 Because DKG is performed when sufficient gas money has accumulated,
 fluctuations in gas prices don't need special consideration.
@@ -396,9 +397,9 @@ Similarly, when gas costs fall DKG gets triggered faster.
 
 Calculate gas required for verifying entry and associated support operations.
 The maximum entry verification gas cost should be hardcoded in the operator
-contract. The service contract takes the highest applicable gas cost and 
-multiplies it by the fluctuation margin (e.g. 1.5) times gas price feed's 
-estimate to get entry verification fee.
+contract. The service contract takes the highest applicable gas cost from all 
+operator contracts being used and  multiplies it by the fluctuation margin 
+(e.g. 1.5) times gas price feed's estimate to get entry verification fee.
 
 ==== Cleanup gas efficiency
 
