Use definition syntax for terms
Suggestion by Antonio to use def syntax instead of nested bullets.
Appropriate and looks better.

--- a/private-testnet/README.adoc
+++ b/private-testnet/README.adoc
@@ -75,14 +75,9 @@ structured in the format highlighted below:
 
 There are 3 scripts that make up preparing deployment bundles:
 
-* `fetch-contract-data.js`
-  ** Grabs the latest contract data for `KeepToken` and `TokenStaking`.  These are
-     used in the `stake-accounts.js` script
-* `stake-accounts.js`
-  ** Stakes each ETH account that is assigned to a participant.
-* `prepare-participant-bundles.js`
-  ** Creates a `.tar.gz` bundle to be distributed to each participant.  The file
-     is stored on the top level of the particpant directory.
+* `fetch-contract-data.js`:: Grabs the latest contract data for `KeepToken` and `TokenStaking`. These are used in the `stake-accounts.js` script
+* `stake-accounts.js`:: Stakes each ETH account that is assigned to a participant.
+* `prepare-participant-bundles.js`:: Creates a `.tar.gz` bundle to be distributed to each participant.  The file is stored on the top level of the particpant directory.
 
 === Dependencies
 
